--- a/minecraft/.classpath
+++ b/minecraft/.classpath
@@ -1,44 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
+	<classpathentry excluding="jars/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/authlib-1.5.21.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/codecjorbis-20101023.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/codecwav-20101023.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/commons-compress-1.8.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/commons-lang3-3.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/gson-2.2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/guava-17.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/httpclient-4.3.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/icu4j-core-mojang-51.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/jinput-2.0.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/jinput-platform-2.0.5-natives-windows.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/jopt-simple-4.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/jutils-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/libraryjavasound-20101123.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/librarylwjglopenal-20100824.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/log4j-api-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/log4j-core-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/lwjgl_util-2.9.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/lwjgl-2.9.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/lwjgl-platform-2.9.1-natives-windows.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/netty-1.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/netty-all-4.0.15.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/realms-1.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/slick.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/soundsystem-20120107.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/trove4j-3.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/twitch-6.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/twitch-external-platform-4.5-natives-windows-64.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/twitch-platform-6.5-natives-windows-64.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/vecmath-1.5.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/LWJGL/lwjgl.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/LWJGL/lwjgl-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoleo/Documents/TimLincon/LWJGL/lwjgl-natives-windows.jar"/>
+	<classpathentry kind="lib" path="jars"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/authlib-1.5.21.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/codecjorbis-20101023.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/codecwav-20101023.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/commons-compress-1.8.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/commons-lang3-3.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/guava-17.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/httpclient-4.3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/icu4j-core-mojang-51.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/jinput-2.0.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/jinput-platform-2.0.5-natives-windows.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/jopt-simple-4.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/jutils-1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/libraryjavasound-20101123.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/librarylwjglopenal-20100824.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/log4j-api-2.0-beta9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/log4j-core-2.0-beta9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/lwjgl_util-2.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/lwjgl-2.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/lwjgl-platform-2.9.1-natives-windows.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/netty-1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/netty-all-4.0.15.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/realms-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/slick.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/soundsystem-20120107.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/trove4j-3.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/twitch-6.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/twitch-external-platform-4.5-natives-windows-64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/twitch-platform-6.5-natives-windows-64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoleo/TimLincon/minecraft/jars/vecmath-1.5.2.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
